همه چیز کار میکنه فعلا